2007-01-17  Mike Cvet  <mcvet@redhat.com>

	* Gui.java (flag): Added. Determines if the monitor side of Frysk gets
	instantiated or not.
	(argString): Added. Contains path to executable for option parsing.
	(pid): Added. PID to attach to, given proper option parsing.
	(gui): Added option parsing. Will either instantiate the monitor or not, 
	checking after creation-agnostic code has been completed.
	(addOptions): Added. Option parsing callbacks. Commented out pending
	#3878.
	(gui): Changed from a clone of the original gui() call to simply
	completing GUI creation minus the Monitor.

2007-01-15  Andrew Cagney  <cagney@redhat.com>

	* test/TestIconManager.java (BASE_PATH, imagePaths): Delete,
	eliminate reference to Build .ABS_SRCDIR.
	(testIconManagerLoad): Update, use frysk .junit .Paths
	.getImagePrefix.
	* test/TestWindowFactorization.java (gladePaths, BASE_PATH)
	(imagePaths): Delete, eliminate Build .ABS_SRCDIR.
	(initGlades): Simplify., use frysk .junit .Paths .getGladePrefix.
	(setUp): Use frysk .junit .Paths .getImagePrefix.
	(testWindowFactorization): Add throw list.

2007-01-15  Mike Cvet  <mcvet@redhat.com>

	* Gui.java (gui): Added a new overloaded gui() method, used to 
	directly instantiate a new SourceWindow.

2007-01-11  Rick Moseley  <rmoseley@redhat.com>

	* glade/frysk_create_session_druid.glade: Change "debug
	session" to "monitoring session".

2007-01-09  sami wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added a border of 6 to statusWidget.

2007-01-08  Andrew Cagney  <cagney@redhat.com>

	* FryskGui.javain: Replace remaining reference to Build.SRCDIR
	with local SRCDIR variable.

	* TestGlade.java: Rename test/TestGlade.java.  Use
	Paths.getGladePrefix and Paths.getImagePrefix instead of
	Build.ABS_SRCDIR.  Fixes frysk/3749.

	* FryskGui.javain: Rename FryskGui.java. Replace Build.SRCDIR and
	Build.ABS_SRCDIR with @srcdir@ and @abs_srcdir@.

2007-01-07  Andrew Cagney  <cagney@redhat.com>
