@@ -1,3 +1,14 @@
+2007-01-18  sami wagiaalla  <swagiaal@redhat.com>
+
+	* test/dogtail_scripts/frysk_suite.in (suite): Added
+	eventViewerAccessibilityInfo to test suit.
+	* test/dogtail_scripts/viewerMarkers.py: Marked test as broken.
+	* test/dogtail_scripts/FryskHelpers.py: Added brokenTest() function.
+
+2007-01-17  sami wagiaalla  <swagiaal@redhat.com>
+
+	* test/dogtail_scripts/eventViewerAccessibilityInfo.py: New test.
+
 2007-01-17  Mike Cvet  <mcvet@redhat.com>
 
 	* Gui.java (flag): Added. Determines if the monitor side of Frysk gets
